*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -6,7 +6,7 @@ Urutonde rw’ibihugu ISO 3166-1
 * '''AL''' [[Alubaniya]]
 * '''AD''' [[Andora]]
 * '''AO''' [[Angola]]
-* AI [[Angwiya]]
+* '''AI''' [[Angwiya]]
 * AQ [[Antarigitika]]
 * AG [[Antigwa na Baribuda]]
 * AN [[Antiye za Nederilande]]
