*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -7,14 +7,14 @@ Urutonde rw’ibihugu ISO 3166-1
 * '''AD''' [[Andora]]
 * '''AO''' [[Angola]]
 * '''AI''' [[Angwiya]]
-* AQ [[Antarigitika]]
-* AG [[Antigwa na Baribuda]]
-* AN [[Antiye za Nederilande]]
-* SA [[Arabiya Sawudite]]
-* AR [[Arijantina]]
-* AW [[Aruba]]
-* AM [[Arumeniya]]
-* AZ [[Azeribayijani]]
+* '''AQ''' [[Antarigitika]]
+* '''AG''' [[Antigwa na Baribuda]]
+* '''AN''' [[Antiye za Nederilande]]
+* '''SA''' [[Arabiya Sawudite]]
+* '''AR''' [[Arijantina]]
+* '''AW''' [[Aruba]]
+* '''AM''' [[Arumeniya]]
+* '''AZ''' [[Azeribayijani]]
 * BS [[Bahamasi]]
 * BH [[Bahirayini]]
 * BD [[Bangaladeshi]]
