*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -19,10 +19,10 @@ Urutonde rw’ibihugu ISO 3166-1
 {| class="wikitable sortable"
 |-
 ! izina
-! itegekongenga Alpha-2
-! itegekongenga Alpha-3
-! itegekongenga ry’umubare
-! itegekongenga [[ISO 3166-2]] 
+! itegekongenga<br /> Alpha-2
+! itegekongenga<br /> Alpha-3
+! itegekongenga<br /> ry’umubare
+! itegekongenga<br /> [[ISO 3166-2]] 
 |-
 | [[Afuganisitani]]
 | [[ISO 3166-1 alpha-2#AF|<tt>AF</tt>]] || <tt>AFG</tt> || <tt>004</tt> || [[ISO 3166-2:AF]]
