--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -220,24 +220,56 @@ Urutonde rw’ibihugu ISO 3166-1
 |-
 | [[Hongo Kongo]]
 | [[ISO 3166-1 alpha-2#HK|<tt>HK</tt>]] || <tt>HKG</tt> || <tt>344</tt> || [[ISO 3166-2:HK]]
+|-
+| [[Ibihugu by’Amajyepfo Nyamfaransa]]
+| [[ISO 3166-1 alpha-2#TF|<tt>TF</tt>]] || <tt>ATF</tt> || <tt>260</tt> || [[ISO 3166-2:TF]]
+|-
+| [[Ibirwa Bito Bikikije Leta Zunze Ubumwe]]
+| [[ISO 3166-1 alpha-2#UM|<tt>UM</tt>]] || <tt>UMI</tt> || <tt>581</tt> || [[ISO 3166-2:UM]]
+|-
+| [[Ibirwa bya Farowe]]
+| [[ISO 3166-1 alpha-2#FO|<tt>FO</tt>]] || <tt>FRO</tt> || <tt>234</tt> || [[ISO 3166-2:FO]]
+|-
+| [[Ibirwa bya Folukilande]] cyangwa [[Maluvinasi]]
+| [[ISO 3166-1 alpha-2#FK|<tt>FK</tt>]] || <tt>FLK</tt> || <tt>238</tt> || [[ISO 3166-2:FK]]
+|-
+| [[Ibirwa bya Kayimani]]
+| [[ISO 3166-1 alpha-2#KY|<tt>KY</tt>]] || <tt>CYM</tt> || <tt>136</tt> || [[ISO 3166-2:KY]]
+|-
+| [[Ibirwa bya Koko]]
+| [[ISO 3166-1 alpha-2#CC|<tt>CC</tt>]] || <tt>CCK</tt> || <tt>166</tt> || [[ISO 3166-2:CC]]
+|-
+| [[Ibirwa bya Kuke]]
+| [[ISO 3166-1 alpha-2#CK|<tt>CK</tt>]] || <tt>COK</tt> || <tt>184</tt> || [[ISO 3166-2:CK]]
+|-
+| [[Ibirwa bya Marishali]]
+| [[ISO 3166-1 alpha-2#MH|<tt>MH</tt>]] || <tt>MHL</tt> || <tt>584</tt> || [[ISO 3166-2:MH]]
+|-
+| [[Ibirwa bya Mariyana y’Amajyaruguru]]
+| [[ISO 3166-1 alpha-2#MP|<tt>MP</tt>]] || <tt>MNP</tt> || <tt>580</tt> || [[ISO 3166-2:MP]]
+|-
+| [[Ibirwa bya Norufoluki]]
+| [[ISO 3166-1 alpha-2#NF|<tt>NF</tt>]] || <tt>NFK</tt> || <tt>574</tt> || [[ISO 3166-2:NF]]
+|-
+| [[Ibirwa bya Solomoni]]
+| [[ISO 3166-1 alpha-2#SB|<tt>SB</tt>]] || <tt>SLB</tt> || <tt>090</tt> || [[ISO 3166-2:SB]]
+|-
+| [[Ibirwa bya Takisi na Kayikosi]]
+| [[ISO 3166-1 alpha-2#TC|<tt>TC</tt>]] || <tt>TCA</tt> || <tt>796</tt> || [[ISO 3166-2:TC]]
+|-
+| [[Ibirwa bya Virigini bya Leta Zunze Ubumwe]]
+| [[ISO 3166-1 alpha-2#VI|<tt>VI</tt>]] || <tt>VIR</tt> || <tt>850</tt> || [[ISO 3166-2:VI]]
+|-
+| [[Ibirwa bya Virigini Nyongereza]]
+| [[ISO 3166-1 alpha-2#VG|<tt>VG</tt>]] || <tt>VGB</tt> || <tt>092</tt> || [[ISO 3166-2:VG]]
+|-
+| [[Icyirwa Hadi n’Ibirwa MakeDonalidi]]
+| [[ISO 3166-1 alpha-2#HM|<tt>HM</tt>]] || <tt>HMD</tt> || <tt>334</tt> || [[ISO 3166-2:HM]]
+|-
+| [[Ikerene]]
+| [[ISO 3166-1 alpha-2#UA|<tt>UA</tt>]] || <tt>UKR</tt> || <tt>804</tt> || [[ISO 3166-2:UA]]
+|}   
 
-|}
-* TF [[Ibihugu by’Amajyepfo Nyamfaransa]]
-* UM [[Ibirwa Bito Bikikije Leta Zunze Ubumwe]]
-* FO [[Ibirwa bya Farowe]]
-* FK [[Ibirwa bya Folukilande (Maluvinasi)]]
-* KY [[Ibirwa bya Kayimani]]
-* CC [[Ibirwa bya Koko]]
-* CK [[Ibirwa bya Kuke]]
-* MH [[Ibirwa bya Marishali]]
-* MP [[Ibirwa bya Mariyana y’Amajyaruguru]]
-* NF [[Ibirwa bya Norufoluki]]
-* SB [[Ibirwa bya Solomoni]]
-* TC [[Ibirwa bya Takisi na Kayikosi]]
-* VI [[Ibirwa bya Virigini bya Leta Zunze Ubumwe]]
-* VG [[Ibirwa bya Virigini Nyongereza]]
-* HM [[Icyirwa Hadi n’Ibirwa MakeDonalidi]]
-* UA [[Ikerene]]
 * GR [[Ikigereki]]
 * BV [[Ikirwa cya Bouve]]
 * IM [[Ikirwa cya Man]]
