*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -11,12 +11,6 @@ Urutonde rw’ibihugu ISO 3166-1
 <br />
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
 
 {| class="wikitable sortable"
 |-
@@ -535,84 +529,230 @@ Urutonde rw’ibihugu ISO 3166-1
 |-
 | [[Palawu]]
 | [[ISO 3166-1 alpha-2#PW|<tt>PW</tt>]] || <tt>PLW</tt> || <tt>585</tt> || [[ISO 3166-2:PW]]
+|-
+| [[Panama]]
+| [[ISO 3166-1 alpha-2#PA|<tt>PA</tt>]] || <tt>PAN</tt> || <tt>591</tt> || [[ISO 3166-2:PA]]
+|-
+| [[Papuwa Nuveli Gineya]]
+| [[ISO 3166-1 alpha-2#PG|<tt>PG</tt>]] || <tt>PNG</tt> || <tt>598</tt> || [[ISO 3166-2:PG]]
+|-
+| [[Paragwe]]
+| [[ISO 3166-1 alpha-2#PY|<tt>PY</tt>]] || <tt>PRY</tt> || <tt>600</tt> || [[ISO 3166-2:PY]]
+|-
+| [[Peru]]
+| [[ISO 3166-1 alpha-2#PE|<tt>PE</tt>]] || <tt>PER</tt> || <tt>604</tt> || [[ISO 3166-2:PE]]
+|-
+| [[Piticayirine]]
+| [[ISO 3166-1 alpha-2#PN|<tt>PN</tt>]] || <tt>PCN</tt> || <tt>612</tt> || [[ISO 3166-2:PN]]
+|-
+| [[Polinesiya Nyamfaransa]]
+| [[ISO 3166-1 alpha-2#PF|<tt>PF</tt>]] || <tt>PYF</tt> || <tt>258</tt> || [[ISO 3166-2:PF]]
+|-
+| [[Polonye]]
+| [[ISO 3166-1 alpha-2#PL|<tt>PL</tt>]] || <tt>POL</tt> || <tt>616</tt> || [[ISO 3166-2:PL]]
+|-
+| [[Porutigali]]
+| [[ISO 3166-1 alpha-2#PT|<tt>PT</tt>]] || <tt>PRT</tt> || <tt>620</tt> || [[ISO 3166-2:PT]]
+|-
+| [[Puwerito Riko]]
+| [[ISO 3166-1 alpha-2#PR|<tt>PR</tt>]] || <tt>PRI</tt> || <tt>630</tt> || [[ISO 3166-2:PR]]
+|-
+| [[Repubulika ya Dominikani]]
+| [[ISO 3166-1 alpha-2#DO|<tt>DO</tt>]] || <tt>DOM</tt> || <tt>214</tt> || [[ISO 3166-2:DO]]
+|-
+| [[Repubulika ya Santara Afurika]]
+| [[ISO 3166-1 alpha-2#CF|<tt>CF</tt>]] || <tt>CAF</tt> || <tt>140</tt> || [[ISO 3166-2:CF]]
+|-
+| [[Reyiniyo]]
+| [[ISO 3166-1 alpha-2#RE|<tt>RE</tt>]] || <tt>REU</tt> || <tt>638</tt> || [[ISO 3166-2:RE]]
+|-
+| [[Romaniya]]
+| [[ISO 3166-1 alpha-2#RO|<tt>RO</tt>]] || <tt>ROU</tt> || <tt>642</tt> || [[ISO 3166-2:RO]]
+|-
+| [[Rwanda]]
+| [[ISO 3166-1 alpha-2#RW|<tt>RW</tt>]] || <tt>RWA</tt> || <tt>646</tt> || [[ISO 3166-2:RW]]
+|-
+| [[Sahara y’Uburengerazuba]]
+| [[ISO 3166-1 alpha-2#EH|<tt>EH</tt>]] || <tt>ESH</tt> || <tt>732</tt> || [[ISO 3166-2:EH]]
+|-
+| [[Saluvadoro]]
+| [[ISO 3166-1 alpha-2#SV|<tt>SV</tt>]] || <tt>SLV</tt> || <tt>222</tt> || [[ISO 3166-2:SV]]
+|-
+| [[Samowa Nyamerika]]
+| [[ISO 3166-1 alpha-2#AS|<tt>AS</tt>]] || <tt>ASM</tt> || <tt>016</tt> || [[ISO 3166-2:AS]]
+|-
+| [[Samowa y’Uburengerazuba]]
+| [[ISO 3166-1 alpha-2#WS|<tt>WS</tt>]] || <tt>WSM</tt> || <tt>882</tt> || [[ISO 3166-2:WS]]
+|-
+| [[Sawo Tome na Purensipe]]
+| [[ISO 3166-1 alpha-2#ST|<tt>ST</tt>]] || <tt>STP</tt> || <tt>678</tt> || [[ISO 3166-2:ST]]
+|-
+| [[Senegali]]
+| [[ISO 3166-1 alpha-2#SN|<tt>SN</tt>]] || <tt>SEN</tt> || <tt>686</tt> || [[ISO 3166-2:SN]]
+|-
+| [[Seribiya]]
+| [[ISO 3166-1 alpha-2#RS|<tt>RS</tt>]] || <tt>SRB</tt> || <tt>688</tt> || [[ISO 3166-2:RS]]
+|-
+| [[Seyishele]]
+| [[ISO 3166-1 alpha-2#SC|<tt>SC</tt>]] || <tt>SYC</tt> || <tt>690</tt> || [[ISO 3166-2:SC]]
+|-
+| [[Shili]]
+| [[ISO 3166-1 alpha-2#CL|<tt>CL</tt>]] || <tt>CHL</tt> || <tt>152</tt> || [[ISO 3166-2:CL]]
+|-
+| [[Shipure]]
+| [[ISO 3166-1 alpha-2#CY|<tt>CY</tt>]] || <tt>CYP</tt> || <tt>196</tt> || [[ISO 3166-2:CY]]
+|-
+| [[Silovakiya]]
+| [[ISO 3166-1 alpha-2#SK|<tt>SK</tt>]] || <tt>SVK</tt> || <tt>703</tt> || [[ISO 3166-2:SK]]
+|-
+| [[Siloveniya]]
+| [[ISO 3166-1 alpha-2#SI|<tt>SI</tt>]] || <tt>SVN</tt> || <tt>705</tt> || [[ISO 3166-2:SI]]
+|-
+| [[Singapore]]
+| [[ISO 3166-1 alpha-2#SG|<tt>SG</tt>]] || <tt>SGP</tt> || <tt>702</tt> || [[ISO 3166-2:SG]]
+|-
+| [[Siri Lanka]]
+| [[ISO 3166-1 alpha-2#LK|<tt>LK</tt>]] || <tt>LKA</tt> || <tt>144</tt> || [[ISO 3166-2:LK]]
+|-
+| [[Siriya]]
+| [[ISO 3166-1 alpha-2#SY|<tt>SY</tt>]] || <tt>SYR</tt> || <tt>760</tt> || [[ISO 3166-2:SY]]
+|-
+| [[Sivalibadi na Jani Mayeni]]
+| [[ISO 3166-1 alpha-2#SJ|<tt>SJ</tt>]] || <tt>SJM</tt> || <tt>744</tt> || [[ISO 3166-2:SJ]]
+|-
+| [[Siyera Lewone]]
+| [[ISO 3166-1 alpha-2#SL|<tt>SL</tt>]] || <tt>SLE</tt> || <tt>694</tt> || [[ISO 3166-2:SL]]
+|-
+| [[Somaliya]]
+| [[ISO 3166-1 alpha-2#SO|<tt>SO</tt>]] || <tt>SOM</tt> || <tt>706</tt> || [[ISO 3166-2:SO]]
+|-
+| [[Sudani]]
+| [[ISO 3166-1 alpha-2#SD|<tt>SD</tt>]] || <tt>SDN</tt> || <tt>736</tt> || [[ISO 3166-2:SD]]
+|-
+| [[Surinamu]]
+| [[ISO 3166-1 alpha-2#SR|<tt>SR</tt>]] || <tt>SUR</tt> || <tt>740</tt> || [[ISO 3166-2:SR]]
+|-
+| [[Suwede]]
+| [[ISO 3166-1 alpha-2#SE|<tt>SE</tt>]] || <tt>SWE</tt> || <tt>752</tt> || [[ISO 3166-2:SE]]
+|-
+| [[Swazilande]]
+| [[ISO 3166-1 alpha-2#SZ|<tt>SZ</tt>]] || <tt>SWZ</tt> || <tt>748</tt> || [[ISO 3166-2:SZ]]
+|-
+| [[Tajikisitani]]
+| [[ISO 3166-1 alpha-2#TJ|<tt>TJ</tt>]] || <tt>TJK</tt> || <tt>762</tt> || [[ISO 3166-2:TJ]]
+|-
+| [[Tanzaniya]]
+| [[ISO 3166-1 alpha-2#TZ|<tt>TZ</tt>]] || <tt>TZA</tt> || <tt>834</tt> || [[ISO 3166-2:TZ]]
+|-
+| [[Tayilande]]
+| [[ISO 3166-1 alpha-2#TH|<tt>TH</tt>]] || <tt>THA</tt> || <tt>764</tt> || [[ISO 3166-2:TH]]
+|-
+| [[Tayiwani]]
+| [[ISO 3166-1 alpha-2#TW|<tt>TW</tt>]] || <tt>TWN</tt> || <tt>158</tt> || [[ISO 3166-2:TW]]
+|-
+| [[Teritwari y’Inyanja y’Abahinde Nyongereza]]
+| [[ISO 3166-1 alpha-2#IO|<tt>IO</tt>]] || <tt>IOT</tt> || <tt>086</tt> || [[ISO 3166-2:IO]]
+|-
+| [[Timoro-Lesite]]
+| [[ISO 3166-1 alpha-2#TL|<tt>TL</tt>]] || <tt>TLS</tt> || <tt>626</tt> || [[ISO 3166-2:TL]]
+|-
+| [[Tirinida na Tobago]]
+| [[ISO 3166-1 alpha-2#TT|<tt>TT</tt>]] || <tt>TTO</tt> || <tt>780</tt> || [[ISO 3166-2:TT]]
+|-
+| [[Togo]]
+| [[ISO 3166-1 alpha-2#TG|<tt>TG</tt>]] || <tt>TGO</tt> || <tt>768</tt> || [[ISO 3166-2:TG]]
+|-
+| [[Tokelawu]]
+| [[ISO 3166-1 alpha-2#TK|<tt>TK</tt>]] || <tt>TKL</tt> || <tt>772</tt> || [[ISO 3166-2:TK]]
+|-
+| [[Tonga]]
+| [[ISO 3166-1 alpha-2#TO|<tt>TO</tt>]] || <tt>TON</tt> || <tt>776</tt> || [[ISO 3166-2:TO]]
+|-
+| [[Tunisiya]]
+| [[ISO 3166-1 alpha-2#TN|<tt>TN</tt>]] || <tt>TUN</tt> || <tt>788</tt> || [[ISO 3166-2:TN]]
+|-
+| [[Turukimenisitani]] cyangwa [[Turikimenisitani]]
+| [[ISO 3166-1 alpha-2#TM|<tt>TM</tt>]] || <tt>TKM</tt> || <tt>795</tt> || [[ISO 3166-2:TM]]
+|-
+| [[Turukiya]]
+| [[ISO 3166-1 alpha-2#TR|<tt>TR</tt>]] || <tt>TUR</tt> || <tt>792</tt> || [[ISO 3166-2:TR]]
+|-
+| [[Tuvalu]]
+| [[ISO 3166-1 alpha-2#TV|<tt>TV</tt>]] || <tt>TUV</tt> || <tt>798</tt> || [[ISO 3166-2:TV]]
+|-
+| [[Ububiligi]]
+| [[ISO 3166-1 alpha-2#BE|<tt>BE</tt>]] || <tt>BEL</tt> || <tt>056</tt> || [[ISO 3166-2:BE]]
+|-
+| [[Ubudage]]
+| [[ISO 3166-1 alpha-2#DE|<tt>DE</tt>]] || <tt>DEU</tt> || <tt>276</tt> || [[ISO 3166-2:DE]]
+|-
+| [[Ubufaransa]]
+| [[ISO 3166-1 alpha-2#FR|<tt>FR</tt>]] || <tt>FRA</tt> || <tt>250</tt> || [[ISO 3166-2:FR]]
+|-
+| [[Ubuhinde]]
+| [[ISO 3166-1 alpha-2#IN|<tt>IN</tt>]] || <tt>IND</tt> || <tt>356</tt> || [[ISO 3166-2:IN]]
+|-
+| [[Uburundi]]
+| [[ISO 3166-1 alpha-2#BI|<tt>BI</tt>]] || <tt>BDI</tt> || <tt>108</tt> || [[ISO 3166-2:BI]]
+|-
+| [[Uburusiya]]
+| [[ISO 3166-1 alpha-2#RU|<tt>RU</tt>]] || <tt>RUS</tt> || <tt>643</tt> || [[ISO 3166-2:RU]]
+|-
+| [[Ubushinwa]]
+| [[ISO 3166-1 alpha-2#CN|<tt>CN</tt>]] || <tt>CHN</tt> || <tt>156</tt> || [[ISO 3166-2:CN]]
+|-
+| [[Ubusuwisi]]
+| [[ISO 3166-1 alpha-2#CH|<tt>CH</tt>]] || <tt>CHE</tt> || <tt>756</tt> || [[ISO 3166-2:CH]]
+|-
+| [[Ubutariyani]]
+| [[ISO 3166-1 alpha-2#IT|<tt>IT</tt>]] || <tt>ITA</tt> || <tt>380</tt> || [[ISO 3166-2:IT]]
+|-
+| [[Ubuyapani]]
+| [[ISO 3166-1 alpha-2#JP|<tt>JP</tt>]] || <tt>JPN</tt> || <tt>392</tt> || [[ISO 3166-2:JP]]
+|-
+| [[Ubwongereza]]
+| [[ISO 3166-1 alpha-2#GB|<tt>GB</tt>]] || <tt>GBR</tt> || <tt>826</tt> || [[ISO 3166-2:GB]]
+|-
+| [[Uzubekisitani]]
+| [[ISO 3166-1 alpha-2#UZ|<tt>UZ</tt>]] || <tt>UZB</tt> || <tt>860</tt> || [[ISO 3166-2:UZ]]
+|-
+| [[Vanuwatu]]
+| [[ISO 3166-1 alpha-2#VU|<tt>VU</tt>]] || <tt>VUT</tt> || <tt>548</tt> || [[ISO 3166-2:VU]]
+|-
+| [[Vatikani]]
+| [[ISO 3166-1 alpha-2#VA|<tt>VA</tt>]] || <tt>VAT</tt> || <tt>336</tt> || [[ISO 3166-2:VA]]
+|-
+| [[Venezuwela]]
+| [[ISO 3166-1 alpha-2#VE|<tt>VE</tt>]] || <tt>VEN</tt> || <tt>862</tt> || [[ISO 3166-2:VE]]
+|-
+| [[Viyetinamu]]
+| [[ISO 3166-1 alpha-2#VN|<tt>VN</tt>]] || <tt>VNM</tt> || <tt>704</tt> || [[ISO 3166-2:VN]]
+|-
+| [[Walisi na Fatuna]]
+| [[ISO 3166-1 alpha-2#WF|<tt>WF</tt>]] || <tt>WLF</tt> || <tt>876</tt> || [[ISO 3166-2:WF]]
+|-
+| [[Yemeni]]
+| [[ISO 3166-1 alpha-2#YE|<tt>YE</tt>]] || <tt>YEM</tt> || <tt>887</tt> || [[ISO 3166-2:YE]]
+|-
+| [[Yorudani]]
+| [[ISO 3166-1 alpha-2#JO|<tt>JO</tt>]] || <tt>JOR</tt> || <tt>400</tt> || [[ISO 3166-2:JO]]
+|-
+| [[Yuganda]]
+| [[ISO 3166-1 alpha-2#UG|<tt>UG</tt>]] || <tt>UGA</tt> || <tt>800</tt> || [[ISO 3166-2:UG]]
+|-
+| [[Zambiya]]
+| [[ISO 3166-1 alpha-2#ZM|<tt>ZM</tt>]] || <tt>ZMB</tt> || <tt>894</tt> || [[ISO 3166-2:ZM]]
+|-
+| [[Zimbabwe]]
+| [[ISO 3166-1 alpha-2#ZW|<tt>ZW</tt>]] || <tt>ZWE</tt> || <tt>716</tt> || [[ISO 3166-2:ZW]]
 
-|}    
-* PA [[Panama]]
-* PG [[Papuwa Nuveli Gineya]]
-* PY [[Paragwe]]
-* PE [[Peru]]
-* PN [[Piticayirine]]
-* PF [[Polinesiya Nyamfaransa]]
-* PL [[Polonye]]
-* PT [[Porutigali]]
-* PR [[Puwerito Riko]]
-* DO [[Repubulika ya Dominikani]]
-* CF [[Repubulika ya Santara Afurika]]
-* RE [[Reyiniyo]]
-* RO [[Romaniya]]
-* RW [[Rwanda]]
-* EH [[Sahara y’Uburengerazuba]]
-* SV [[Saluvadoro]]
-* AS [[Samowa Nyamerika]]
-* WS [[Samowa y’Uburengerazuba]]
-* ST [[Sawo Tome na Purensipe]]
-* SN [[Senegali]]
-* RS [[Seribiya]]
-* SC [[Seyishele]]
-* CL [[Shili]]
-* CY [[Shipure]]
-* SK [[Silovakiya]]
-* SI [[Siloveniya]]
-* SG [[Singapore]]
-* LK [[Siri Lanka]]
-* SY [[Siriya]]
-* SJ [[Sivalibadi na Jani Mayeni]]
-* SL [[Siyera Lewone]]
-* SO [[Somaliya]]
-* SD [[Sudani]]
-* SR [[Surinamu]]
-* SE [[Suwede]]
-* SZ [[Swazilande]]
-* TJ [[Tajikisitani]]
-* TZ [[Tanzaniya]]
-* TH [[Tayilande]]
-* TW [[Tayiwani]]
-* IO [[Teritwari y’Inyanja y’Abahinde Nyongereza]]
-* TB [[Tibeti]]
-* TL [[Timoro-Lesite]]
-* TT [[Tirinida na Tobago]]
-* TG [[Togo]]
-* TK [[Tokelawu]]
-* TO [[Tonga]]
-* TN [[Tunisiya]]
-* TM [[Turukimenisitani]] cyangwa [[Turikimenisitani]]
-* TR [[Turukiya]]
-* TV [[Tuvalu]]
-* BE [[Ububiligi]]
-* DE [[Ubudage]]
-* FR [[Ubufaransa]]
-* IN [[Ubuhinde]]
-* BI [[Uburundi]]
-* RU [[Uburusiya]]
-* CN [[Ubushinwa]]
-* CH [[Ubusuwisi]]
-* IT [[Ubutariyani]]
-* JP [[Ubuyapani]]
-* GB [[Ubwongereza]]
-* UZ [[Uzubekisitani]]
-* VU [[Vanuwatu]]
-* VA [[Vatikani]]
-* VE [[Venezuwela]]
-* VN [[Viyetinamu]]
-* WF [[Walisi na Fatuna]]
-* YE [[Yemeni]]
-* JO [[Yorudani]]
-* UG [[Yuganda]]
-* ZM [[Zambiya]]
-* ZR [[Zayire]]
-* ZW [[Zimbabwe]]
+|}
+
+
 * '''AN''' [[Antiye za Nederilande]]
-* KO [[Kosovo]]
+* '''KO''' [[Kosovo]]
+* '''TB''' [[Tibeti]]
+* '''ZR''' [[Zayire]]
 
 [[Category:Ibihugu]]
 
