*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -557,6 +557,9 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Puwerito Riko]]
 | [[ISO 3166-1 alpha-2#PR|<tt>PR</tt>]] || <tt>PRI</tt> || <tt>630</tt> || [[ISO 3166-2:PR]]
 |-
+| [[Repubulika Iharanira Demokarasi ya Kongo]]
+| [[ISO 3166-1 alpha-2#CD|<tt>CD</tt>]] || <tt>COD</tt> || <tt>180</tt> || [[ISO 3166-2:CD]]
+|-
 | [[Repubulika ya Dominikani]]
 | [[ISO 3166-1 alpha-2#DO|<tt>DO</tt>]] || <tt>DOM</tt> || <tt>214</tt> || [[ISO 3166-2:DO]]
 |-
