*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -365,6 +365,9 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Koweti]]
 | [[ISO 3166-1 alpha-2#KW|<tt>KW</tt>]] || <tt>KWT</tt> || <tt>414</tt> || [[ISO 3166-2:KW]]
 |-
+| "Curaçao"
+| [[ISO 3166-1 alpha-2#CW|<tt>CW</tt>]] || <tt>CUW</tt> || <tt>531</tt> || [[ISO 3166-2:CW]]
+|-
 | [[Lativiya]]
 | [[ISO 3166-1 alpha-2#LV|<tt>LV</tt>]] || <tt>LVA</tt> || <tt>428</tt> || [[ISO 3166-2:LV]]
 |-
