*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -533,6 +533,9 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Palawu]]
 | [[ISO 3166-1 alpha-2#PW|<tt>PW</tt>]] || <tt>PLW</tt> || <tt>585</tt> || [[ISO 3166-2:PW]]
 |-
+| [[Palestine]]
+| [[ISO 3166-1 alpha-2#PS|<tt>PS</tt>]] || <tt>PSE</tt> || <tt>275</tt> || [[ISO 3166-2:PS]]
+|-
 | [[Panama]]
 | [[ISO 3166-1 alpha-2#PA|<tt>PA</tt>]] || <tt>PAN</tt> || <tt>591</tt> || [[ISO 3166-2:PA]]
 |-
