*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -482,6 +482,15 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Mutagatifu Visenti na Gerenadine]]
 | [[ISO 3166-1 alpha-2#VC|<tt>VC</tt>]] || <tt>VCT</tt> || <tt>670</tt> || [[ISO 3166-2:VC]]
 |-
+| "Saint Barthélemy"
+| [[ISO 3166-1 alpha-2#BL|<tt>BL</tt>]] || <tt>BLM</tt> || <tt>652</tt> || [[ISO 3166-2:BL]]
+|-
+| "Saint Martin (French part)"
+| [[ISO 3166-1 alpha-2#MF|<tt>MF</tt>]] || <tt>MAF</tt> || <tt>663</tt> || [[ISO 3166-2:MF]]
+|-
+| "Sint Maarten (Dutch part)"
+| [[ISO 3166-1 alpha-2#SX|<tt>SX</tt>]] || <tt>SXM</tt> || <tt>534</tt> || [[ISO 3166-2:SX]]
+|-
 | [[Namibiya]]
 | [[ISO 3166-1 alpha-2#NA|<tt>NA</tt>]] || <tt>NAM</tt> || <tt>516</tt> || [[ISO 3166-2:NA]]
 |-
