*Empty MediaWiki Message*

--- a/Nili.mw
+++ b/Nili.mw
@@ -2,6 +2,8 @@
 
 Uruzi rwa '''Nili''' (izina mu [[cyarabu]]: '''النيل‎''') rubarirwa ku burebure bwa kilometero 6,650 n’ubugari bwa kilometero 8. Muri rusange rufatwa nk’ururerure ku isi, kandi ni rwo ruzi runini mu zitemba zerekeza mu majyaruguru y’[[Afurika]].
 
+Igihugu cya Misiri tuzi neza ko gitunzwe n'uruzi rwa Nil, uru ruzi rero rukaba rufite isoko iva mu bihugu byinshi aribyo : [[Etiyopiya]], [[Sudani]], [[Rwanda]], [[Tanzaniya]], [[Yuganda]], [[Uburundi]], [[Repubulika Iharanira Demokarasi ya Kongo]], [[Eritereya]] na [[Kenya]]. 
+
 Nili igizwe imigezi ibiri minini: [[Nili Yera]] izwi ku izina rya Bahr Al Jabal muri Sudani, na [[Nili y’Ubururu]] yinjiza amenshi mu mazi y’uruzi rwa Nili, ikaba ari na yo ikeshwa ifumbire iboneka mu gishanga Nili inyuramo.
 
 Uruzi rwa '''Nili y’Umuhondo''' (''Yellow Nile''), ni rwo rwahuzaga Nili nini n’imisozi ya Ouaddaï yo muri Cadi y’uburasirazuba mu myaka ya za 8000 kugera mu 1000 mbere y’ivuka rya Yesu. Igice cyayo gisigaye kizwi ku izina rya Wadi Howar. 
