--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -16,8 +16,11 @@ Mu bundi bushakashatsi bwa Nurses' Health Study bwakozwe ku bantu benshi, barimo
 
 Bakaba banavuga ko ari byiza ku bamaze kurwara diyabete kunywa ikawa kuko ifasha mu bijyanye n'uko umubiri wakira umusemburo wa insuline ndeste n`uburyo umubiri wihanganira ''glucose''. Igisigaye ku bashakashatsi akaba ari ukumenya buryo ki irinda iyo ndwara. Gusa ni ngombwa kwirinda gukabya, nta kurenza uturahure 5 cyangwa 6 ku munsi!<ref>[http://www.igihe.com/news-8-15-9029.html Uruhare rw'ikawa (Café, Coffee) mu kurwanya indwara ya diyabete]</ref> 
 
+== ==
+*[[Ikawa ya Maraba]]
+
 ==  Notes  == 
-<references/>  
+<references/>
 
 == Imiyoboro ==
 *[http://www.isar.rw/spip.php?article148 ISAR Porogaramu y’Ikawa]
